# readdyviewer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  setup.py
conda.recipe/: build.sh  meta.yaml
devtools/travis/: setup_miniconda.sh
readdyviewer/: __init__.py
readdyviewer/resources/shaders/: CMakeLists.txt
readdyviewer/resources/shaders/edge/: fragment.glsl  vertex.glsl
readdyviewer/resources/shaders/framing/: fragment.glsl
readdyviewer/resources/shaders/light/: light.glsl
readdyviewer/resources/shaders/particles/: fragment.glsl  vertex.glsl
readdyviewer/resources/shaders/spheres/: fragment.glsl
resources/shaders/edge/: fragment.glsl  vertex.glsl
resources/shaders/framing/: vertex.glsl
resources/shaders/gl43/framing/: fragment.glsl
resources/shaders/light/: light.glsl
resources/shaders/particles/: fragment.glsl  vertex.glsl
resources/shaders/spheres/: vertex.glsl
resources/textures/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Edges.cpp  Edges.h  Framing.cpp  Framing.h  Light.h  LightArrangement.cpp  LightArrangement.h  PointSprite.cpp  PointSprite.h  ShaderProgram.cpp  ShaderProgram.h  TesselatedPointSprite.cpp  TesselatedPointSprite.h  TesselatedSphereSprite.cpp  TesselatedSphereSprite.h  Texture.cpp  Texture.h  Trajectory.cpp  Trajectory.h  Viewer.cpp  Viewer.h  common.h  main.cpp  preprocessing.h
src/gl30/: common30.h
src/gl43/: Camera.h  Framing.cpp  Framing.h  LightArrangement.cpp  LightArrangement.h  PointSprite.cpp  PointSprite.h  ShaderProgram.h  Texture.h  Trajectory.cpp  Trajectory.h  Viewer.cpp  Viewer.h  common43.h
src/shaders/framing/: vertex.glsl
src/shaders/gl43/light/: light.glsl
src/shaders/gl43/particles/: fragment.glsl  vertex.glsl
src/shaders/light/: light.glsl
src/shaders/particles/: fragment.glsl  vertex.glsl
tests/: shaders  test.py  test_watch.py  textures
